# rtc-hal

./: Cargo.toml  README.md
src/: alarm.rs  bcd.rs  control.rs  datetime.rs  error.rs  lib.rs  nvram.rs  rtc.rs  square_wave.rs
