[package]
name = "rtc-hal"
version = "0.1.1"
edition = "2024"
authors = ["ImplFerris"]
description = "Platform-agnostic hardware abstraction for Real Time Clock peripherals."
license = "MIT"
repository = "https://github.com/implferris/rtc-hal"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["rtc", "real", "clock", "hal", "driver"]


[dependencies]
