[package]
name = "rtc-hal"
version = "0.3.0"
edition = "2024"
authors = ["ImplFerris"]
description = "Platform-agnostic hardware abstraction for Real Time Clock peripherals."
license = "MIT"
repository = "https://github.com/implferris/rtc-hal"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["rtc", "real", "clock", "hal", "driver"]


[dependencies]
defmt = { version = "1.0.1", optional = true }


[features]
defmt = ["dep:defmt"]
